grammar_grammar.txt
grammar             : rule *                                    ;

rule                : NAME ':' or_tokens * ';'                  ;

or_tokens           : and_tokens ( '|' and_tokens ) *           ; 
and_tokens          : cmpd_token ( '&' cmpd_token ) *           ;
cmpd_token          : '~' ? atom ( '*' | '+' | '?' ) ?          ;
atom                : sub_rule | STRING | rule_invoke | range   ;

sub_rule            : '(' or_tokens * ')'                       ; 
STRING              : "'" ~ "'" + "'"                           ;
rule_invoke         : NAME                                      ; 
RANGE               : . '..' .                                  ;

NAME                : a..z +                                    ;

PREDICATES: 

NAME        ->  NAME
COMMENT     ->  COMMENT
STRING      ->  STRING

END

TOKENS:
OR                      '|'
AND                     '&'
QMARK                   '?'
COMMA                   ','
PERIOD                  '.'
LPAREN                  '(' 
RPAREN                  ')'
LCURBRACK               '{'
RCURBRACK               '}'   
LBRACK                  '['
RBRACK                  ']'
SEMICOLON               ';'
COLON                   ':'
EQUALS                  '='
DEQUALS                 '=='  
QUOTE                   "'"
DQUOTE                  '"'
STAR                    '*'
PLUS                    '+'
DASH                    '-'
FSLASH                  '/'
BSLASH                  '\'
TILDE                   '~'
WILDCARD                '.'
RANGE                   '..'
NAME                    NON_PRE_DEF
NUMBER                  NON_PRE_DEF
STRING                NON_PRE_DEF
#COMMENT                NON_PRE_DEF
END
